--- a/packages/node/os/package.json
+++ b/packages/node/os/package.json
@@ -6,6 +6,7 @@
   "module": "lib/esm/index.js",
   "scripts": {
     "clear": "rm -rf lib",
+    "print:name": "echo '@gjsify/os'",
     "build": "yarn print:name && gjsify build --library src/**/*.{ts,js}",
     "build:test": "yarn run build:test:gjs && yarn run build:test:node",
     "build:test:gjs": "gjsify build src/test.mts --app gjs --outfile test.gjs.mjs",
