chore: Changed moduleResolution to NodeNext

--- a/packages/deno/runtime/tsconfig.json
+++ b/packages/deno/runtime/tsconfig.json
@@ -6,7 +6,7 @@
         "lib": [],
         "module": "ESNext",
         "target": "ESNext",
-        "moduleResolution": "Node",
+        "moduleResolution": "NodeNext",
         "outDir": "lib",
         "declarationDir": "lib",
         "rootDir": "src",
