--- a/packages/infra/esbuild-plugin-deepkit/tsconfig.json
+++ b/packages/infra/esbuild-plugin-deepkit/tsconfig.json
@@ -4,7 +4,7 @@
       "declarationDir": "dist",
       "declaration": true,
       "target": "ESNext",
-      "moduleResolution": "node"
+      "moduleResolution": "NodeNext"
     },
     "files": ["src/index.ts"]
 }
