--- a/packages/gjs/unit/tsconfig.json
+++ b/packages/gjs/unit/tsconfig.json
@@ -6,7 +6,7 @@
     "esModuleInterop": true,
     "target": "ESNext",
     "module": "ESNext",
-    "moduleResolution": "node"
+    "moduleResolution": "NodeNext"
   },
   "files": ["src/index.ts"]
 }
