--- a/packages/node/require/tsconfig.json
+++ b/packages/node/require/tsconfig.json
@@ -3,7 +3,7 @@
       "module": "ESNext",
       "types": ["node"],
       "target": "ESNext",
-      "moduleResolution": "node",
+      "moduleResolution": "NodeNext",
       "experimentalDecorators": true,
       "allowSyntheticDefaultImports": true,
       "outDir": "lib",
