--- a/packages/web/webgl/tsconfig.json
+++ b/packages/web/webgl/tsconfig.json
@@ -7,7 +7,7 @@
 		"target": "es2020",
 		"declaration": true,
 		"module": "CommonJS",
-		"moduleResolution": "node",
+		"moduleResolution": "NodeNext",
 		"esModuleInterop": true,
 		"experimentalDecorators": true,
 		"allowSyntheticDefaultImports": true,
