--- a/packages/node/os/package.json
+++ b/packages/node/os/package.json
@@ -2,8 +2,9 @@
   "name": "@gjsify/os",
   "version": "0.0.1",
   "description": "Node.js os module for Gjs",
-  "main": "lib/cjs/index.js",
+  "main": "lib/cjs/index.cjs",
   "module": "lib/esm/index.js",
+  "type": "module",
   "scripts": {
     "clear": "rm -rf lib",
     "print:name": "echo '@gjsify/os'",
