--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
     "print:yarn": "echo 'Using yarn' && yarn --version",
     "build": "yarn print:name && yarn print:yarn && yarn build:infra && yarn run build:gjs && yarn run build:all",
     "build:infra": "yarn workspace @gjsify/resolve-npm run build && yarn workspace @gjsify/esbuild-plugin-deepkit run build && yarn workspace @gjsify/esbuild-plugin-deno-loader run build && yarn workspace @gjsify/esbuild-plugin-gjsify run build && yarn workspace @gjsify/cli run build",
-    "build:gjs": "yarn workspace @gjsify/types run build && yarn workspace @gjsify/utils run build && yarn workspace @gjsify/unit run build",
+    "build:gjs": "yarn workspace @gjsify/webgl run build && yarn workspace @gjsify/types run build && yarn workspace @gjsify/utils run build && yarn workspace @gjsify/unit run build",
     "build:all": "yarn workspaces foreach --no-private --parallel run build"
   },
   "author": "Pascal Garber <pascal@artandcode.studio>",
   "license": "MIT",
   "devDependencies": {
     "@types/jsdom": "^20.0.1",
-    "typescript": "^4.9.4"
+    "typescript": "next"
   },
   "packageManager": "yarn@4.0.0-rc.33",
   "disabled_resolutions": {
