--- a/packages/deno/runtime/package.json
+++ b/packages/deno/runtime/package.json
@@ -34,8 +34,8 @@
         "build:test:deno": "gjsify build src/test.ts --app deno --outfile test.deno.js",
         "sync:dts": "node copy-d-ts-files.mjs",
         "test": "yarn run print:name && yarn build && yarn build:test && yarn test:gjs && yarn test:deno",
-        "test:gjs": "gjs -m test.gjs.js",
-        "test:deno": "deno run --unstable --allow-env test.deno.js",
+        "test:gjs": "gjs -m test.gjs.js main.ts -- --location https://example.com/path",
+        "test:deno": "deno run --unstable --allow-env --location https://example.com/path test.deno.js",
         "git:upstream:init": "cd src && git remote add upstream https://github.com/denoland/deno.git || exit 0",
         "git:upstream:diff": "open-cli https://github.com/gjsify/deno/compare/main...denoland:deno:main",
         "git:upstream:_merge": "cd src && git fetch upstream && git merge upstream/main",
