--- a/packages/node/fs/package.json
+++ b/packages/node/fs/package.json
@@ -2,8 +2,9 @@
     "name": "@gjsify/fs",
     "version": "0.0.1",
     "description": "Node.js fs module for Gjs",
-    "main": "lib/cjs/index.js",
+    "main": "lib/cjs/index.cjs",
     "module": "lib/esm/index.js",
+    "type": "module",
     "scripts": {
         "clear": "rm -rf lib",
         "print:name": "echo '@gjsify/fs'",
