--- a/packages/node/process/package.json
+++ b/packages/node/process/package.json
@@ -4,6 +4,7 @@
   "description": "Node.js process module for Gjs",
   "main": "lib/cjs/index.js",
   "module": "lib/esm/index.js",
+  "type": "module",
   "scripts": {
     "clear": "rm -rf lib",
     "print:name": "echo '@gjsify/process'",
