--- a/packages/node/require/package.json
+++ b/packages/node/require/package.json
@@ -8,8 +8,9 @@
     "require"
   ],
   "author": "Pascal Garber",
-  "main": "lib/cjs/index.js",
+  "main": "lib/cjs/index.cjs",
   "module": "lib/esm/index.js",
+  "type": "module",
   "scripts": {
     "clear": "rm -rf lib",
     "print:name": "echo '@gjsify/require'",
