--- a/packages/web/html-image-element/package.json
+++ b/packages/web/html-image-element/package.json
@@ -4,6 +4,7 @@
     "description": "Web html-image-element module for Gjs",
     "module": "lib/index.js",
     "types": "lib/index.d.ts",
+    "type": "module",
     "scripts": {
         "clear": "rm -rf lib",
         "print:name": "echo '@gjsify/html-image-element'",
