test(deno-runtime): Test can also be build and run for deno itself

--- a/packages/deno/runtime/tsconfig.json
+++ b/packages/deno/runtime/tsconfig.json
@@ -3,7 +3,9 @@
     "display": "Deno",
     "compilerOptions": {
         "jsx": "react",
-        "lib": [],
+        "noLib": true,
+        // "lib": [],
+        "types": [],
         "module": "ESNext",
         "target": "ESNext",
         "moduleResolution": "NodeNext",
