--- a/.gitmodules
+++ b/.gitmodules
@@ -11,7 +11,7 @@
 	path = packages/node/assert
 	url = https://github.com/gjsify/assert.git
 [submodule "packages/node/deno_std"]
-	path = packages/node/deno_std
+	path = packages/deno/std
 	url = git@github.com:gjsify/deno_std.git
 [submodule "packages/infra/esbuild-plugin-deno-loader"]
 	path = packages/infra/esbuild-plugin-deno-loader
