--- a/packages/web/webgl/package.json
+++ b/packages/web/webgl/package.json
@@ -26,7 +26,7 @@
         "@gjsify/cli": "workspace:^",
         "@gjsify/unit": "workspace:^",
         "@types/node": "^18.11.17",
-        "typescript": "^4.9.4"
+        "typescript": "^5.0.0-dev.20221222"
     },
     "dependencies": {
         "@gjsify/html-image-element": "workspace:^",
