--- a/packages/deno/runtime/package.json
+++ b/packages/deno/runtime/package.json
@@ -28,7 +28,6 @@
         "build": "yarn print:name && yarn build:gjsify && yarn build:types && yarn sync:dts",
         "build:gjsify": "mkdir lib -p && gjsify build --library src/{core,ext,ops,runtime,types}/**/*.ts src/cli/{js,ops}/*.ts src/*.ts --exclude **/*.d.ts lib",
         "build:types": "tsc --emitDeclarationOnly || exit 0",
-        "copy:types": "rm -rf lib/cli/tsc && mkdir -p lib/cli/tsc && cp -r src/cli/tsc/dts lib/cli/tsc/dts",
         "build:test": "yarn run build:test:gjs && yarn build:test:deno",
         "build:test:gjs": "gjsify build src/test.ts --app gjs --outfile test.gjs.js",
         "build:test:deno": "gjsify build src/test.ts --app deno --outfile test.deno.js",
@@ -54,6 +53,6 @@
         "@types/node": "^18.11.17",
         "fast-glob": "^3.2.12",
         "open-cli": "^7.1.0",
-        "typescript": "^4.9.4"
+        "typescript": "^5.0.0-dev.20221222"
     }
 }
