--- a/packages/gjs/unit/package.json
+++ b/packages/gjs/unit/package.json
@@ -36,6 +36,6 @@
   "homepage": "https://github.com/gjsify/unit#readme",
   "devDependencies": {
     "@gjsify/cli": "workspace:^",
-    "typescript": "^4.9.4"
+    "typescript": "^5.0.0-dev.20221222"
   }
 }
