--- a/packages/infra/cli/package.json
+++ b/packages/infra/cli/package.json
@@ -31,6 +31,6 @@
     },
     "devDependencies": {
         "@types/yargs": "^17.0.17",
-        "typescript": "^4.9.4"
+        "typescript": "^5.0.0-dev.20221222"
     }
 }
