--- a/packages/infra/esbuild-plugin-deepkit/package.json
+++ b/packages/infra/esbuild-plugin-deepkit/package.json
@@ -23,6 +23,6 @@
     },
     "devDependencies": {
         "esbuild": "^0.16.10",
-        "typescript": "^4.9.4"
+        "typescript": "^5.0.0-dev.20221222"
     }
 }
