--- a/packages/infra/esbuild-plugin-gjsify/package.json
+++ b/packages/infra/esbuild-plugin-gjsify/package.json
@@ -50,6 +50,6 @@
         "@types/lodash": "^4.14.191",
         "esbuild": "^0.16.10",
         "lodash": "^4.17.21",
-        "typescript": "^4.9.4"
+        "typescript": "^5.0.0-dev.20221222"
     }
 }
