--- a/packages/node/node-internal/package.json
+++ b/packages/node/node-internal/package.json
@@ -26,6 +26,6 @@
         "@gjsify/cli": "workspace:^",
         "@gjsify/unit": "workspace:^",
         "@types/node": "^18.11.17",
-        "typescript": "^4.9.4"
+        "typescript": "^5.0.0-dev.20221222"
     }
 }
