--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,8 +28,8 @@ jobs:
       - run: sudo apt-get update
       - name: Install Gjs, Gtk and more...
         run: sudo apt-get --yes install gjs libgda-5.0-dev libgirepository1.0-dev libgtk-4-dev libsoup-3.0-dev libwebkit2gtk-4.0-dev libadwaita-1-dev
-      - name: Install meson
-        run: sudo apt-get --yes install meson
+      - name: Install meson and valac
+        run: sudo apt-get --yes install meson valac
       - name: Install NPM dependencies
         run: yarn install --immutable
       - name: Build
