chore: Transform file imports with extensions to .js

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "btok",
         "deepkit",
         "Deepkit's",
+        "Deno",
         "dflt",
         "DONT",
         "drawingbuffer",
