--- a/packages/infra/cli/package.json
+++ b/packages/infra/cli/package.json
@@ -3,6 +3,7 @@
     "version": "0.0.1",
     "description": "CLI for Gjsify",
     "type": "module",
+    "main": "lib/index.js",
     "module": "lib/index.js",
     "types": "lib/index.d.ts",
     "bin": {
@@ -24,13 +25,13 @@
     "dependencies": {
         "@gjsify/esbuild-plugin-deepkit": "workspace:^",
         "@gjsify/esbuild-plugin-gjsify": "workspace:^",
-        "esbuild": "^0.16.10",
+        "esbuild": "^0.16.11",
         "lodash": "^4.17.21",
         "pkg-types": "^1.0.1",
         "yargs": "^17.6.2"
     },
     "devDependencies": {
         "@types/yargs": "^17.0.17",
-        "typescript": "^5.0.0-dev.20221222"
+        "typescript": "^5.0.0-dev.20221227"
     }
 }
