--- a/packages/infra/esbuild-plugin-gjsify/package.json
+++ b/packages/infra/esbuild-plugin-gjsify/package.json
@@ -37,9 +37,10 @@
         "@gjsify/zlib": "workspace:^",
         "assert": "^2.0.0",
         "constants-browserify": "^1.0.0",
-        "core-js": "^3.26.1",
+        "core-js": "^3.27.0",
         "crypto-browserify": "^3.12.0",
-        "esbuild-plugin-glob": "^2.2.0",
+        "fast-glob": "^3.2.12",
+        "micromatch": "^4.0.5",
         "path-browserify": "^1.0.1",
         "punycode": "^2.1.1",
         "stream-browserify": "^3.0.0",
@@ -48,8 +49,9 @@
     },
     "devDependencies": {
         "@types/lodash": "^4.14.191",
-        "esbuild": "^0.16.10",
+        "@types/micromatch": "^4.0.2",
+        "esbuild": "^0.16.11",
         "lodash": "^4.17.21",
-        "typescript": "^5.0.0-dev.20221222"
+        "typescript": "^5.0.0-dev.20221227"
     }
 }
