--- a/packages/node/os/package.json
+++ b/packages/node/os/package.json
@@ -2,7 +2,7 @@
   "name": "@gjsify/os",
   "version": "0.0.1",
   "description": "Node.js os module for Gjs",
-  "main": "lib/cjs/index.cjs",
+  "main": "lib/cjs/index.js",
   "module": "lib/esm/index.js",
   "type": "module",
   "scripts": {
