--- a/packages/web/fetch/package.json
+++ b/packages/web/fetch/package.json
@@ -2,7 +2,7 @@
     "name": "@gjsify/fetch",
     "version": "0.0.1",
     "description": "Web and Node.js fetch module for Gjs",
-    "main": "lib/cjs/index.cjs",
+    "main": "lib/cjs/index.js",
     "module": "lib/esm/index.js",
     "type": "module",
     "scripts": {
@@ -25,7 +25,7 @@
         "@gjsify/cli": "workspace:^",
         "@gjsify/http": "workspace:^",
         "@gjsify/unit": "workspace:^",
-        "@types/node": "^18.11.17"
+        "@types/node": "^18.11.18"
     },
     "dependencies": {
         "@gjsify/gio-2.0": "workspace:^",
