--- a/packages/node/url/tsconfig.json
+++ b/packages/node/url/tsconfig.json
@@ -13,6 +13,5 @@
     "allowJs": true,
     "checkJs": false,
     "reflection": false,
-    "include": ["src/**/*.ts"],
-    "exclude": ["src/test.mts", "src/**/*.spec.ts"]
+    "include": ["src/**/*.ts"]
 }
