--- a/packages/node/util/tsconfig.json
+++ b/packages/node/util/tsconfig.json
@@ -15,6 +15,5 @@
   "allowJs": true,
   "checkJs": false,
   "reflection": false,
-  "include": ["src/**/*.ts"],
-  "exclude": ["src/test.mts", "src/**/*.spec.ts"]
+  "include": ["src/**/*.ts"]
 }
