--- a/packages/node/util/package.json
+++ b/packages/node/util/package.json
@@ -2,6 +2,7 @@
     "name": "@gjsify/util",
     "version": "0.0.1",
     "description": "Node.js util module for Gjs",
+    "type": "module",
     "main": "lib/cjs/index.js",
     "module": "lib/esm/index.js",
     "types": "lib/types/index.d.ts",
@@ -10,10 +11,10 @@
         "print:name": "echo '@gjsify/util'",
         "build": "yarn print:name && yarn build:gjsify && yarn run build:types",
         "build:gjsify": "gjsify build --library src/**/*.{ts,js}",
-        "build:types": "tsc --emitDeclarationOnly || exit 0",
+        "build:types": "tsc --project tsconfig.types.json || exit 0",
         "build:test": "yarn run build:test:gjs && yarn run build:test:node",
-        "build:test:gjs": "gjsify build src/test.mts --app gjs --outfile test.gjs.mjs",
-        "build:test:node": "gjsify build src/test.mts --app node --outfile test.node.mjs",
+        "build:test:gjs": "gjsify build src/test.ts --app gjs --outfile test.gjs.mjs",
+        "build:test:node": "gjsify build src/test.ts --app node --outfile test.node.mjs",
         "test": "yarn run print:name && yarn run build && yarn run build:test && yarn run test:node && yarn run test:gjs",
         "test:gjs": "gjs -m test.gjs.mjs",
         "test:node": "node test.node.mjs"
@@ -31,6 +32,7 @@
         "typescript": "^5.0.0-dev.20221227"
     },
     "dependencies": {
+        "@gjsify/deno_std": "workspace:^",
         "@gjsify/node-internal": "workspace:^",
         "is-arguments": "^1.1.1",
         "is-generator-function": "^1.0.10",
