--- a/packages/infra/esbuild-plugin-transform-ext/tsconfig.json
+++ b/packages/infra/esbuild-plugin-transform-ext/tsconfig.json
@@ -3,7 +3,7 @@
     "module": "ESNext",
     "target": "ESNext",
     "outDir": "dist",
-    "declarationDir": "dist",
+    "declarationDir": "dist/types",
     "declaration": true,
     "allowSyntheticDefaultImports": true,
     "moduleResolution": "bundler",
