--- a/packages/node/zlib/package.json
+++ b/packages/node/zlib/package.json
@@ -26,6 +26,7 @@
         "@types/node": "^18.11.18"
     },
     "dependencies": {
+        "@gjsify/deno_std": "workspace:^",
         "fflate": "^0.7.4"
     }
 }
