--- a/packages/node/zlib/package.json
+++ b/packages/node/zlib/package.json
@@ -26,7 +26,6 @@
         "@types/node": "^18.11.18"
     },
     "dependencies": {
-        "@gjsify/deno_std": "workspace:^",
-        "fflate": "^0.7.4"
+        "@gjsify/deno_std": "workspace:^"
     }
 }
