--- a/packages/node/zlib/package.json
+++ b/packages/node/zlib/package.json
@@ -4,10 +4,14 @@
     "description": "Node.js zlib module for Gjs",
     "main": "lib/cjs/index.js",
     "module": "lib/esm/index.js",
+    "types": "lib/types/index.d.ts",
+    "type": "module",
     "scripts": {
         "clear": "rm -rf lib",
         "print:name": "echo '@gjsify/zlib'",
-        "build": "yarn print:name && gjsify build --library src/**/*.{ts,js}",
+        "build": "yarn print:name && yarn build:gjsify && yarn run build:types",
+        "build:gjsify": "gjsify build --library src/**/*.{ts,js}",
+        "build:types": "tsc --project tsconfig.types.json || exit 0",
         "build:test": "yarn run build:test:gjs && yarn run build:test:node",
         "build:test:gjs": "gjsify build src/test.mts --app gjs --outfile test.gjs.mjs",
         "build:test:node": "gjsify build src/test.mts --app node --outfile test.node.mjs",
@@ -23,7 +27,8 @@
     "devDependencies": {
         "@gjsify/cli": "workspace:^",
         "@gjsify/unit": "workspace:^",
-        "@types/node": "^18.11.18"
+        "@types/node": "^18.11.18",
+        "typescript": "^5.0.0-dev.20221227"
     },
     "dependencies": {
         "@gjsify/deno_std": "workspace:^"
