--- a/packages/node/events/package.json
+++ b/packages/node/events/package.json
@@ -2,12 +2,15 @@
     "name": "@gjsify/events",
     "version": "0.0.1",
     "description": "Node.js events module for Gjs",
+    "type": "module",
     "main": "lib/cjs/index.js",
     "module": "lib/esm/index.js",
     "scripts": {
         "clear": "rm -rf lib",
         "print:name": "echo '@gjsify/events'",
-        "build": "yarn print:name && gjsify build --library src/**/*.{ts,js}",
+        "build": "yarn print:name && yarn build:gjsify && yarn run build:types",
+        "build:gjsify": "gjsify build --library 'src/**/*.{ts,js}' --exclude 'src/**/*.spec.{mts,ts}' 'src/test.{mts,ts}'",
+        "build:types": "tsc --project tsconfig.types.json || exit 0",
         "build:test": "yarn run build:test:gjs && yarn run build:test:node",
         "build:test:gjs": "gjsify build src/test.mts --app gjs --outfile test.gjs.mjs",
         "build:test:node": "gjsify build src/test.mts --app node --outfile test.node.mjs",
@@ -23,10 +26,10 @@
     "devDependencies": {
         "@gjsify/cli": "workspace:^",
         "@gjsify/unit": "workspace:^",
-        "@types/node": "^18.11.18"
+        "@types/node": "^18.11.18",
+        "typescript": "^5.0.0-dev.20221227"
     },
     "dependencies": {
-        "@gjsify/event-target": "workspace:^",
-        "@gjsify/node-internal": "workspace:^"
+        "@gjsify/deno_std": "workspace:^"
     }
 }
