chore(node-stream): Use our fork of deno_std for this modules

--- a/packages/node/assert/package.json
+++ b/packages/node/assert/package.json
@@ -20,7 +20,7 @@
     "keywords": [
         "gjs",
         "node",
-        "fs"
+        "assert"
     ],
     "devDependencies": {
         "@gjsify/cli": "workspace:^",
