--- a/packages/web/abort-controller/package.json
+++ b/packages/web/abort-controller/package.json
@@ -1,27 +1,28 @@
 {
-    "name": "@gjsify/assert",
+    "name": "@gjsify/abort-controller",
     "version": "0.0.1",
-    "description": "Node.js assert module for Gjs",
+    "description": "Web AbortController module for Gjs",
+    "type": "module",
     "main": "lib/cjs/index.js",
     "module": "lib/esm/index.js",
     "types": "lib/types/index.d.ts",
     "scripts": {
         "clear": "rm -rf lib",
-        "print:name": "echo '@gjsify/assert'",
+        "print:name": "echo '@gjsify/abort-controller'",
         "build": "yarn print:name && yarn build:gjsify && yarn run build:types",
         "build:gjsify": "gjsify build --library 'src/**/*.{ts,js}' --exclude 'src/**/*.spec.{mts,ts}' 'src/test.{mts,ts}'",
         "build:types": "tsc --project tsconfig.types.json || exit 0",
         "build:test": "yarn run build:test:gjs && yarn run build:test:node",
         "build:test:gjs": "gjsify build src/test.mts --app gjs --outfile test.gjs.mjs",
         "build:test:node": "gjsify build src/test.mts --app node --outfile test.node.mjs",
-        "test": "yarn run print:name && yarn run build && yarn run build:test && yarn run test:node && yarn run test:gjs",
+        "test": "yarn run print:name && yarn run build && yarn run build:test && yarn run test:gjs",
         "test:gjs": "gjs -m test.gjs.mjs",
         "test:node": "node test.node.mjs"
     },
     "keywords": [
         "gjs",
         "node",
-        "assert"
+        "buffer"
     ],
     "devDependencies": {
         "@gjsify/cli": "workspace:^",
@@ -30,6 +31,7 @@
         "typescript": "^5.0.0-dev.20221227"
     },
     "dependencies": {
+        "@gjsify/deno-runtime": "workspace:^",
         "@gjsify/deno_std": "workspace:^"
     }
 }
