--- a/packages/infra/esbuild-plugin-deepkit/package.json
+++ b/packages/infra/esbuild-plugin-deepkit/package.json
@@ -19,7 +19,8 @@
         "fs"
     ],
     "dependencies": {
-        "@deepkit/type-compiler": "^1.0.1-alpha.83"
+        "@deepkit/type-compiler": "^1.0.1-alpha.83",
+        "@gjsify/resolve-npm": "workspace:^"
     },
     "devDependencies": {
         "esbuild": "^0.16.11",
