--- a/packages/infra/esbuild-plugin-transform-ext/package.json
+++ b/packages/infra/esbuild-plugin-transform-ext/package.json
@@ -44,8 +44,7 @@
         "path-browserify": "^1.0.1",
         "punycode": "^2.1.1",
         "stream-browserify": "^3.0.0",
-        "string_decoder": "^1.3.0",
-        "web-streams-polyfill": "^3.2.1"
+        "string_decoder": "^1.3.0"
     },
     "devDependencies": {
         "@types/lodash": "^4.14.191",
