--- a/packages/infra/resolve-npm/package.json
+++ b/packages/infra/resolve-npm/package.json
@@ -3,8 +3,8 @@
     "version": "0.0.1",
     "description": "Resolve NPM package aliases",
     "type": "module",
-    "main": "lib/index.js",
-    "module": "lib/index.js",
+    "main": "lib/index.mjs",
+    "module": "lib/index.mjs",
     "types": "lib/index.d.ts",
     "scripts": {
         "clear": "echo 'nothing to do'",
