--- a/packages/node/stream/package.json
+++ b/packages/node/stream/package.json
@@ -5,6 +5,35 @@
     "type": "module",
     "main": "lib/cjs/index.js",
     "module": "lib/esm/index.js",
+    "types": "lib/types/index.d.js",
+    "exports": {
+        ".": {
+          "import": "./lib/esm/index.js",
+          "default": "./lib/esm/index.js",
+          "require":  "./lib/cjs/index.js"
+        },
+        "./consumers": {
+            "import": "./lib/esm/consumers/index.js",
+            "default": "./lib/esm/consumers/index.js",
+            "require":  "./lib/cjs/consumers/index.js"
+        },
+        "./promises": {
+            "import": "./lib/esm/promises/index.js",
+            "default": "./lib/esm/promises/index.js",
+            "require":  "./lib/cjs/promises/index.js"
+        },
+        "./web": {
+            "import": "./lib/esm/web/index.js",
+            "default": "./lib/esm/web/index.js",
+            "require":  "./lib/cjs/web/index.js"
+        }
+    },
+    "*": {
+        "": ["lib/types/index.d.js"],
+        "consumers": ["lib/types/consumers/index.d.js"],
+        "promises": ["lib/types/promises/index.d.js"],
+        "web": ["lib/types/web/index.d.js"]
+    },
     "scripts": {
         "clear": "rm -rf lib",
         "print:name": "echo '@gjsify/stream'",
