--- a/packages/infra/esbuild-plugin-gjsify/package.json
+++ b/packages/infra/esbuild-plugin-gjsify/package.json
@@ -23,6 +23,8 @@
         "@deepkit/injector": "^1.0.1-alpha.85",
         "@deepkit/type": "^1.0.1-alpha.85",
         "@gjsify/assert": "workspace:^",
+        "@gjsify/deno-runtime": "workspace:^",
+        "@gjsify/deno_std": "workspace:^",
         "@gjsify/esbuild-plugin-deepkit": "workspace:^",
         "@gjsify/esbuild-plugin-deno-loader": "workspace:^",
         "@gjsify/events": "workspace:^",
@@ -33,6 +35,7 @@
         "@gjsify/require": "workspace:^",
         "@gjsify/resolve-npm": "workspace:^",
         "@gjsify/tty": "workspace:^",
+        "@gjsify/util": "workspace:^",
         "@gjsify/zlib": "workspace:^",
         "assert": "^2.0.0",
         "constants-browserify": "^1.0.0",
