--- a/packages/infra/esbuild-plugin-gjsify/package.json
+++ b/packages/infra/esbuild-plugin-gjsify/package.json
@@ -34,6 +34,7 @@
         "@gjsify/process": "workspace:^",
         "@gjsify/require": "workspace:^",
         "@gjsify/resolve-npm": "workspace:^",
+        "@gjsify/stream": "workspace:^",
         "@gjsify/tty": "workspace:^",
         "@gjsify/util": "workspace:^",
         "@gjsify/zlib": "workspace:^",
@@ -46,13 +47,14 @@
         "path-browserify": "^1.0.1",
         "punycode": "^2.1.1",
         "stream-browserify": "^3.0.0",
-        "string_decoder": "^1.3.0"
+        "string_decoder": "^1.3.0",
+        "test": "^3.2.1"
     },
     "devDependencies": {
         "@types/lodash": "^4.14.191",
         "@types/micromatch": "^4.0.2",
-        "esbuild": "^0.16.11",
+        "esbuild": "^0.16.12",
         "lodash": "^4.17.21",
-        "typescript": "^5.0.0-dev.20221227"
+        "typescript": "^5.0.0-dev.20221228"
     }
 }
