--- a/packages/node/assert/package.json
+++ b/packages/node/assert/package.json
@@ -5,6 +5,26 @@
     "main": "lib/cjs/index.js",
     "module": "lib/esm/index.js",
     "types": "lib/types/index.d.ts",
+    "exports": {
+        ".": {
+            "import": "./lib/esm/index.js",
+            "default": "./lib/esm/index.js",
+            "require": "./lib/cjs/index.js"
+        },
+        "./strict": {
+            "import": "./lib/esm/strict/index.js",
+            "default": "./lib/esm/strict/index.js",
+            "require": "./lib/cjs/strict/index.js"
+        }
+    },
+    "*": {
+        "": [
+            "lib/types/index.d.js"
+        ],
+        "strict": [
+            "lib/types/strict/index.d.js"
+        ]
+    },
     "scripts": {
         "clear": "rm -rf lib",
         "print:name": "echo '@gjsify/assert'",
@@ -27,7 +47,7 @@
         "@gjsify/cli": "workspace:^",
         "@gjsify/unit": "workspace:^",
         "@types/node": "^18.11.18",
-        "typescript": "^5.0.0-dev.20221227"
+        "typescript": "^5.0.0-dev.20221228"
     },
     "dependencies": {
         "@gjsify/deno_std": "workspace:^"
