fix(fetch): Fix to make the very simple fetch test runable without errors

--- a/packages/infra/esbuild-plugin-gjsify/package.json
+++ b/packages/infra/esbuild-plugin-gjsify/package.json
@@ -28,6 +28,7 @@
         "@gjsify/esbuild-plugin-deepkit": "workspace:^",
         "@gjsify/esbuild-plugin-deno-loader": "workspace:^",
         "@gjsify/events": "workspace:^",
+        "@gjsify/fetch": "workspace:^",
         "@gjsify/fs": "workspace:^",
         "@gjsify/node-globals": "workspace:^",
         "@gjsify/os": "workspace:^",
