fix(node/fs): lstat, stat, realpath and symlink

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,7 @@
         "Parameterx",
         "Pixbuf",
         "primordials",
+        "printerr",
         "stackgl",
         "tform",
         "Toks",
