--- a/packages/node/fs/package.json
+++ b/packages/node/fs/package.json
@@ -47,6 +47,7 @@
         "@types/node": "^18.11.18"
     },
     "dependencies": {
-        "@gjsify/deno_std": "workspace:^"
+        "@gjsify/deno_std": "workspace:^",
+        "@gjsify/gio-2.0": "workspace:^"
     }
 }
