--- a/packages/web/dom-events/tsconfig.json
+++ b/packages/web/dom-events/tsconfig.json
@@ -3,16 +3,17 @@
     "module": "ESNext",
     "types": ["node"],
     "target": "ESNext",
-    "moduleResolution": "NodeNext",
     "experimentalDecorators": true,
     "outDir": "lib",
     "rootDir": "src",
-    "composite": true
+    "declarationDir": "lib/types",
+    "composite": true,
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true
   },
   "skipLibCheck": true,
   "allowJs": true,
   "checkJs": false,
   "reflection": false,
   "include": ["src/**/*.ts"],
-  "exclude": ["src/test.mts", "src/**/*.spec.ts"]
 }
