chore: Upgrade dependencies and submodules

--- a/examples/deepkit-di/package.json
+++ b/examples/deepkit-di/package.json
@@ -8,10 +8,10 @@
   "scripts": {
     "clear": "rm -rf dist",
     "print:name": "echo '@gjsify/example-deepkit-di'",
-    "start": "yarn run build && yarn run start:gjs",
+    "start": "yarn build && yarn start:gjs",
     "start:gjs": "gjs -m dist/index.gjs.js",
     "start:node": "node dist/index.node.cjs",
-    "build": "yarn print:name && yarn build:gjs && yarn run build:node",
+    "build": "yarn print:name && yarn build:gjs && yarn build:node",
     "build:gjs": "gjsify build src/index.ts --app gjs --outfile dist/index.gjs.js",
     "build:node": "gjsify build src/index.ts --app node --outfile dist/index.node.cjs"
   },
