--- a/packages/deno/runtime/package.json
+++ b/packages/deno/runtime/package.json
@@ -26,13 +26,13 @@
         "clear": "rm -rf lib tsconfig.tsbuildinfo",
         "print:name": "echo '@gjsify/deno-runtime'",
         "build": "yarn print:name && yarn build:gjsify && yarn build:types && yarn sync:dts",
-        "build:gjsify": "mkdir lib -p && gjsify build --library src/{core,ext,ops,runtime,types}/**/*.ts src/cli/{js,ops}/*.ts src/*.ts --exclude **/*.d.ts lib",
+        "build:gjsify": "mkdir lib -p && gjsify build --library 'src/{core,ext,ops,runtime,types}/**/*.ts' 'src/cli/{js,ops}/*.ts' 'src/*.ts' --exclude '**/*.d.ts' 'lib'",
         "build:types": "tsc --emitDeclarationOnly || exit 0",
-        "build:test": "yarn run build:test:gjs && yarn build:test:deno",
+        "build:test": "yarn build:test:gjs && yarn build:test:deno",
         "build:test:gjs": "gjsify build src/test.ts --app gjs --outfile test.gjs.js",
         "build:test:deno": "gjsify build src/test.ts --app deno --outfile test.deno.js",
         "sync:dts": "node copy-d-ts-files.mjs",
-        "test": "yarn run print:name && yarn build && yarn build:test && yarn test:gjs && yarn test:deno",
+        "test": "yarn print:name && yarn build:gjsify && yarn build:test && yarn test:gjs && yarn test:deno",
         "test:gjs": "gjs -m test.gjs.js main.ts --location https://example.com/path",
         "test:deno": "deno run --unstable --allow-env --location https://example.com/path test.deno.js",
         "git:upstream:init": "cd src && git remote add upstream https://github.com/denoland/deno.git || exit 0",
