--- a/packages/node/url/tsconfig.json
+++ b/packages/node/url/tsconfig.json
@@ -3,8 +3,9 @@
       "module": "ESNext",
       "types": ["node"],
       "target": "ESNext",
-      "moduleResolution": "NodeNext",
       "experimentalDecorators": true,
+      "moduleResolution": "bundler",
+      "allowImportingTsExtensions": true,
       "outDir": "lib",
       "rootDir": "src",
       "composite": true
