--- a/examples/webgl-demo-fade/package.json
+++ b/examples/webgl-demo-fade/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "clear": "rm -rf dist",
     "print:name": "echo '@gjsify/example-webgl-demo-fade'",
-    "start": "yarn run build && yarn run start:gjs",
+    "start": "yarn build && yarn start:gjs",
     "start:gjs": "LD_LIBRARY_PATH=../../packages/web/webgl/build GI_TYPELIB_PATH=../../packages/web/webgl/build gjs -m dist/index.gjs.js",
     "build": "yarn print:name && yarn build:gjs",
     "build:gjs": "gjsify build src/index.ts --app gjs --outfile dist/index.gjs.js"
