--- a/examples/webgl-tutorial-07/package.json
+++ b/examples/webgl-tutorial-07/package.json
@@ -8,10 +8,10 @@
   "scripts": {
     "clear": "rm -rf dist",
     "print:name": "echo '@gjsify/example-webgl-tutorial-07'",
-    "start": "yarn run build && yarn run start:gjs",
+    "start": "yarn build && yarn start:gjs",
     "start:gjs": "LD_LIBRARY_PATH=../../packages/web/webgl/build GI_TYPELIB_PATH=../../packages/web/webgl/build gjs -m dist/gjs.js",
     "start:browser": "http-server dist",
-    "build": "yarn run clear && yarn run build:gjs && yarn run build:browser && yarn run build:assets",
+    "build": "yarn clear && yarn build:gjs && yarn build:browser && yarn build:assets",
     "build:gjs": "gjsify build src/gjs.ts --app gjs --outfile dist/gjs.js",
     "build:assets": "cp -f src/index.html dist/index.html && cp -f src/webgl.css dist/webgl.css && cp -f src/cubetexture.png dist/cubetexture.png",
     "build:browser": "gjsify build src/browser.ts --app browser --outfile dist/browser.js"
