--- a/packages/gjs/utils/package.json
+++ b/packages/gjs/utils/package.json
@@ -9,12 +9,12 @@
     "scripts": {
         "clear": "rm -rf lib tsconfig.tsbuildinfo",
         "print:name": "echo '@gjsify/utils'",
-        "build": "yarn print:name && yarn build:gjsify && yarn run build:types",
+        "build": "yarn print:name && yarn build:gjsify && yarn build:types",
         "build:gjsify": "gjsify build --library 'src/**/*.{ts,js}' --exclude 'src/**/*.spec.{mts,ts}' 'src/test.{mts,ts}'",
         "build:types": "tsc --emitDeclarationOnly || exit 0",
-        "build:test": "yarn run build:test:gjs",
+        "build:test": "yarn build:test:gjs",
         "build:test:gjs": "gjsify build src/test.ts --app gjs --outfile test.gjs.js",
-        "test": "yarn run print:name && yarn run build && yarn run build:test && yarn run test:gjs",
+        "test": "yarn print:name && yarn build:gjsify && yarn build:test && yarn test:gjs",
         "test:gjs": "gjs -m test.gjs.js"
     },
     "keywords": [
